<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#1E3D59"
    tools:context=".SIGNUP_PAGE">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lasttime"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstname"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Currently_studing"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/bloodgroup"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/blood_group"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <EditText
        android:id="@+id/StudentID"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#03A9F4"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/BirthDate"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="74dp"
        android:backgroundTint="F5F0E1"
        android:ems="10"
        android:hint="@string/birth_date"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/university" />

    <EditText
        android:id="@+id/Department"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:hint="@string/department"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/StudentID"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/Currently_studing"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="F5F0E1"
        android:ems="10"
        android:hint="@string/currently_studing"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Department"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/last_studied"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="@string/last_studied"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloodgroup" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="#FF6E40"
        android:hint="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/university"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#FF5722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_studied" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <EditText
        android:id="@+id/NID"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nid"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>